[metadata]
name = gbackup
version = file: VERSION
author = Abhilash Raj
author_email = maxking@asynchronous.in
description = Backup utility for code hosting websites like Gitlab
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.6
setup_requires =
    setuptools
install_requires =
    python-gitlab
packages = find:
